--- a/reacttest/hello-world/src/index.css
+++ b/reacttest/hello-world/src/index.css
@@ -3,3 +3,18 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+
+body{
+  background-color: #15a783;
+}
+
+#root2{
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -250px;
+  margin-top: -140px;
+  font-size: 50px;
+}
