--- a/reacttodo/todo/src/App.css
+++ b/reacttodo/todo/src/App.css
@@ -1,8 +1,16 @@
 .App {
-  text-align: center;
+  color: #333;
+   border: 1px solid #aaa;
+   border-radius: 4px;
+   background: white;
+   margin: 2em;
+   padding: 0 1em;
+   min-height: 20em;
+   min-width: 32em;
+   box-shadow: 0 0 1em hsla(0,0%,0%,0.15);
 }
 
-.App-logo {
+/*.App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
@@ -21,4 +29,4 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
-}
+}*/
