--- a/reacttodo/todo/src/App.css
+++ b/reacttodo/todo/src/App.css
@@ -1,12 +1,11 @@
 .App {
-  color: #333;
-   border: 1px solid #aaa;
+   color: #333;
    border-radius: 4px;
-   background: white;
+   background: #28989e;
    margin: 2em;
    padding: 0 1em;
    min-height: 20em;
-   min-width: 32em;
+   min-width: 34em;
    box-shadow: 0 0 1em hsla(0,0%,0%,0.15);
 }
 
@@ -30,13 +29,16 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }*/
-.App > .todoList> li:nth-child(odd){
-  background: #eee;
+.App > .todoList> li{
+    background: #eee;
+    margin-bottom: 10px;
+    border-radius: 4px;
 }
- .App > .todoList> li:nth-child(even){
-  background: transparent;
- }
+
 
 .App> h1{
   text-align: center;
+  color: white;
 }
+
+
